--- a/static/css/leaflet.css
+++ b/static/css/leaflet.css
@@ -392,7 +392,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 /* Default icon URLs */
 .leaflet-default-icon-path {
-	background-image: url(img/marker-icon.png);
+	background-image: url(../img/marker-icon.png);
 	}
 
 
