--- a/templates/public_base.haml
+++ b/templates/public_base.haml
@@ -12,7 +12,7 @@
 
 - block extra-style
   {{ block.super }}
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
   :css
     .banner-bg {
         {% if banner_bg %}
