--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -716,6 +716,7 @@
         html2canvas(region).then(canvas => {
           var imageData = canvas.toDataURL("image/png");
           $("img.screenshot-rendered").attr("src", imageData);
+          $("img.screenshot-rendered").attr("style", "color:black;cursor:default;font-family:sans-serif;font-size:50;font-weight:bold;fill:black;");
           $("a.download-screenshot").attr("download", "ureport-screenshare-" + eltID + Date.now() + ".png")
           $("a.download-screenshot").attr("href", imageData);
 
