Update highcharts configs

--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -658,6 +658,20 @@
         style: {
             fontFamily: 'sans-serif'
         },
+        xAxis: {
+            title: {
+                style: {
+                    fontFamily: 'sans-serif'
+                }
+            }
+        },
+        yAxis: {
+            title: {
+                style: {
+                    fontFamily: 'sans-serif'
+                }
+            }
+        },
         lang: {
           months: [
             "{% trans "January" %}",
