Update highcharts configs

--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -663,13 +663,23 @@
                 style: {
                     fontFamily: 'sans-serif'
                 }
-            }
+            },
+            labels: {
+              style: {
+                  fontFamily: 'sans-serif'
+              }
+          }
         },
         yAxis: {
             title: {
                 style: {
                     fontFamily: 'sans-serif'
                 }
+            },
+            labels: {
+              style: {
+                  fontFamily: 'sans-serif'
+              }
             }
         },
         lang: {
