Update highcharts configs

--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -682,6 +682,18 @@
               }
             }
         },
+        zAxis: {
+            title: {
+                style: {
+                    fontFamily: 'sans-serif'
+                }
+            },
+            labels: {
+              style: {
+                  fontFamily: 'sans-serif'
+              }
+            }
+        },
         lang: {
           months: [
             "{% trans "January" %}",
@@ -689,7 +701,7 @@
             "{% trans "March" %}",
             "{% trans "April" %}",
             "{% trans "May" %}",
-            "{% trans "June" %}",
+            "{% trans "June" %}", 
             "{% trans "July" %}",
             "{% trans "August" %}",
             "{% trans "September" %}",
