Update highcharts configs

--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -656,43 +656,48 @@
 
       Highcharts.setOptions({
         style: {
-            fontFamily: 'sans-serif'
+          fontFamily: 'sans-serif'
         },
         xAxis: {
             title: {
                 style: {
-                    fontFamily: 'sans-serif'
+                  fontFamily: 'sans-serif'
                 }
             },
             labels: {
               style: {
-                  fontFamily: 'sans-serif'
+                fontFamily: 'sans-serif'
               }
           }
         },
         yAxis: {
             title: {
                 style: {
-                    fontFamily: 'sans-serif'
+                  fontFamily: 'sans-serif'
                 }
             },
             labels: {
               style: {
-                  fontFamily: 'sans-serif'
+                fontFamily: 'sans-serif'
               }
             }
         },
         zAxis: {
             title: {
                 style: {
-                    fontFamily: 'sans-serif'
+                  fontFamily: 'sans-serif'
                 }
             },
             labels: {
               style: {
-                  fontFamily: 'sans-serif'
+                fontFamily: 'sans-serif'
               }
             }
+        },
+        plotOptions: {
+          style: {
+            fontFamily: 'sans-serif'
+          }
         },
         lang: {
           months: [
