Update highcharts configs

--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -699,6 +699,21 @@
             fontFamily: 'sans-serif'
           }
         },
+        caption: {
+          style: {
+            fontFamily: 'sans-serif'
+          }
+        },
+        chart: {
+          style: {
+            fontFamily: 'sans-serif'
+          }
+        },
+        legend: {
+          style: {
+            fontFamily: 'sans-serif'
+          }
+        }
         lang: {
           months: [
             "{% trans "January" %}",
