Update highcharts configs

--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -658,6 +658,16 @@
         style: {
           fontFamily: 'sans-serif'
         },
+        title: {
+          style: {
+            fontFamily: 'sans-serif'
+          }
+        },
+        subtitle: {
+          style: {
+            fontFamily: 'sans-serif'
+          }
+        },
         xAxis: {
             title: {
                 style: {
