Update highcharts configs

--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -724,6 +724,11 @@
             fontFamily: 'sans-serif'
           }
         },
+        labels: {
+          style: {
+            fontFamily: 'sans-serif'
+          }
+        },
         lang: {
           months: [
             "{% trans "January" %}",
