Update hightcharts config

--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -678,7 +678,14 @@
               style: {
                 fontFamily: 'sans-serif'
               }
-          }
+          },
+          plotBands: [{
+              label: {
+                style: {
+                  fontFamily: 'sans-serif'
+                }
+              }
+            }]
         },
         yAxis: {
             title: {
@@ -690,7 +697,14 @@
               style: {
                 fontFamily: 'sans-serif'
               }
-            }
+            },
+            plotBands: [{
+              label: {
+                style: {
+                  fontFamily: 'sans-serif'
+                }
+              }
+            }]
         },
         zAxis: {
             title: {
@@ -702,12 +716,14 @@
               style: {
                 fontFamily: 'sans-serif'
               }
-            }
-        },
-        plotOptions: {
-          style: {
-            fontFamily: 'sans-serif'
-          }
+            },
+            plotBands: [{
+              label: {
+                style: {
+                  fontFamily: 'sans-serif'
+                }
+              }
+            }]
         },
         caption: {
           style: {
