Update highcharts configs

--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -685,6 +685,13 @@
                   fontFamily: 'sans-serif'
                 }
               }
+            }],
+          plotLines: [{
+              label: {
+                style: {
+                  fontFamily: 'sans-serif'
+                }
+              }
             }]
         },
         yAxis: {
