--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -681,6 +681,7 @@
           },
           plotBands: [{
               label: {
+                text: 'Plot band',
                 style: {
                   fontFamily: 'sans-serif'
                 }
@@ -708,6 +709,7 @@
             plotBands: [{
               label: {
                 style: {
+                  text: 'Plot band',
                   fontFamily: 'sans-serif'
                 }
               }
@@ -727,6 +729,7 @@
             plotBands: [{
               label: {
                 style: {
+                  text: 'Plot band',
                   fontFamily: 'sans-serif'
                 }
               }
