--- a/templates/public_base_v2.haml
+++ b/templates/public_base_v2.haml
@@ -730,7 +730,7 @@
               label: {
                 style: {
                   text: 'Plot band',
-                  fontFamily: 'sans-serif'
+                  fontFamily: 'sans-serif',
                 }
               }
             }]
