--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -35,11 +35,11 @@
   :css
     <!-- color overloads for countries -->
     .primary-border {
-       border-color: {{ org|config:"primary_color"}} !important;
+       border-color: {{ org|config:"dark1_color"}} !important;
     }
 
     .primary-background {
-       background: {{ org|config:"primary_color"}} !important;
+       background: {{ org|config:"dark1_color"}} !important;
     }
 
     .highlight-background {
