--- a/templates/public/join_engage.haml
+++ b/templates/public/join_engage.haml
@@ -2,6 +2,8 @@
 
 - load dashblocks thumbnail ureport i18n
 
+-block top-join-call
+
 -block content
   - load_qbs request.org 'join_engage'
   - load_qbs request.org 'join_steps'
