--- a/templates/public_base.haml
+++ b/templates/public_base.haml
@@ -39,76 +39,39 @@
 
     :css
       .bg-dark1 {
-        {% if org|config:'dark1_color' %}
-        background: {{ org|config:'dark1_color' }};
-        {% else %}
-        background: {{ org|config:'primary_color'|default:'#439932' }};
-        {% endif %}
-
+        background: {{ org|config:'dark1_color'|default:'#439932'  }};
       }
 
       .border-dark1 {
-        {% if org|config:'dark1_color' %}
-        border-color: {{ org|config:'dark1_color' }};
-        {% else %}
-        border-color: {{ org|config:'primary_color'|default:'#439932' }};
-        {% endif %}
+        border-color: {{ org|config:'dark1_color'|default:'#439932' }};
       }
 
       .hover\:border-dark1:hover {
-        {% if org|config:'dark1_color' %}
-        border-color: {{ org|config:'dark1_color' }};
-        {% else %}
-        border-color: {{ org|config:'primary_color'|default:'#439932' }};
-        {% endif %}
+        border-color: {{ org|config:'dark1_color'|default:'#439932' }};
       }
 
       .bg-dark2 {
-        {% if org|config:'dark2_color' %}
-        background: {{ org|config:'dark2_color' }};
-        {% else %}
-        background: {{ org|config:'primary_color'|default:'#1751af' }};
-        {% endif %}
+        background: {{ org|config:'dark2_color'|default:'#1751af' }};
       }
 
       .border-dark2 {
-        {% if org|config:'dark2_color' %}
-        border-color: {{ org|config:'dark2_color' }};
-        {% else %}
-        border-color: {{ org|config:'primary_color'|default:'#1751af' }};
-        {% endif %}
+        border-color: {{ org|config:'dark2_color'|default:'#1751af' }};
       }
 
       .hover\:border-dark2:hover {
-        {% if org|config:'dark2_color' %}
-        border-color: {{ org|config:'dark2_color' }};
-        {% else %}
-        border-color: {{ org|config:'primary_color'|default:'#1751af' }};
-        {% endif %}
+        border-color: {{ org|config:'dark2_color'|default:'#1751af' }};
       }
 
       .bg-dark3 {
-        {% if org|config:'dark3_color' %}
-        background: {{ org|config:'dark3_color' }};
-        {% else %}
-        background: {{ org|config:'primary_color'|default:'#5eb3e0' }};
-        {% endif %}
+        background: {{ org|config:'dark3_color'|default:'#5eb3e0' }};
       }
 
       .border-dark3 {
-        {% if org|config:'dark3_color' %}
-        border-color: {{ org|config:'dark3_color' }};
-        {% else %}
-        border-color: {{ org|config:'primary_color'|default:'#5eb3e0' }};
-        {% endif %}
+        border-color: {{ org|config:'dark3_color'|default:'#5eb3e0' }};
       }
 
       .hover\:border-dark3:hover {
-        {% if org|config:'dark3_color' %}
-        border-color: {{ org|config:'dark3_color' }};
-        {% else %}
-        border-color: {{ org|config:'primary_color'|default:'#5eb3e0' }};
-        {% endif %}
+        border-color: {{ org|config:'dark3_color'|default:'#5eb3e0' }};
       }
 
       .border-light1 {
@@ -179,15 +142,16 @@
       }
 
     :javascript
-      {% if org|config:"colors" %}
-      var orgColors = '{{org|config:"colors"}}'.split(',');
-      {% else %}
-      var orgColors = [
-        "{{ org|config:'primary_color'|default:'#439932' }}",
-        "{{ org|config:'secondary_color'|default:'#1751af' }}",
-        "{{ org|config:'tertiary_color'|default:'#5eb3e0' }}"
-      ];
-      {% endif %}
+      var defaultColors = ["#e4002b", "#ff8200", "#ffd100", "#009a17", "#41b6e6", "#0050b5", "#d9d9d6"];
+      var orgColors = '{{org|config:"colors"|default:""}}'.toUpperCase().split(',');
+
+      for (var i = 0; i < defaultColors.length; i++) {
+        var elt = defaultColors[i].trim().toUpperCase();
+        if ((orgColors.length <= 6) && (!orgColors.includes(elt))) {
+          orgColors.push(elt);
+        }
+      }
+
 
     -if org and org|config:"google_tag_manager_id"
       <!-- Google Tag Manager -->
@@ -227,6 +191,7 @@
 
       <div class="fb-customerchat"
         page_id="{{ org|config:"facebook_page_id" }}"
+        greeting_dialog_display="icon"
         logged_in_greeting="{{ org|config:"facebook_welcome_text"|default:"Hi! Welcome to U-Report, chat to register and start speaking out today!" }}"
         logged_out_greeting="{{ org|config:"facebook_welcome_text"|default:"Hi! Welcome to U-Report, chat to register and start speaking out today!" }}">
       </div>
@@ -235,7 +200,7 @@
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/{{ org_lang }}/sdk/xfbml.customerchat.js{% if not org|config:'facebook_page_id' or not org|config:'facebook_app_id' %}#xfbml=1&autoLogAppEvents=1&version=v3.2{% endif %}";
+      js.src = "//connect.facebook.net/{{ org_lang }}/sdk/xfbml.customerchat.js{% if not org|config:'facebook_page_id' or not org|config:'facebook_app_id' %}#xfbml=1&autoLogAppEvents=1&version=v12.0{% endif %}";
       fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
@@ -568,7 +533,25 @@
               %a#mobile-menu-toggler(href="javascript:void(0)")
                 %i.fas.fa-bars
                 %i.fas.fa-times.hidden
-  
+
+      -block top-join-call
+        .max-w-page.mx-auto.justify-around.mt-5.mb-12.px-home.border-b.pb-6(class="md:flex")
+          .flex-1
+            .p-8.hover-parent
+              {% edit_content 'orgs.org_edit' "" "#id_common.join_text_top"  "-m-8"  "dark"  %}
+
+              .text-3xl.font-bold.leading-tight.text-center
+                -if org|config:"join_text_top"
+                  {{ org|config:"join_text_top" }}
+                -else
+                  - trans "Join U-Report, Your voice matters."
+
+              .mt-8.text-center
+                %a.btn.bg-light1.text-black.hover-dark(href="{% url 'public.join' %}")
+                  - if org|config:"join_button_text"
+                    {{ org|config:"join_button_text" }}
+                  - else
+                    -trans "Join Now"
      
       -block content
   
@@ -698,6 +681,9 @@
   // Age charts
   %script(type="text/coffeescript" src="{{ STATIC_URL }}coffee/v2_age.coffee")
 
+  // Scheme charts
+  %script(type="text/coffeescript" src="{{ STATIC_URL }}coffee/v2_scheme_bar.coffee")
+
   // FB Shares
   %script(type="text/coffeescript" src="{{ STATIC_URL }}coffee/v2_fb_share.coffee")
 
@@ -728,11 +714,7 @@
   -block script
     :javascript
       // global primary color
-      {% if org|config:"dark1_color" %}
       var primaryColor = '{{ org|config:"dark1_color"}}';
-      {% else %}
-      var primaryColor = '{{ org|config:"primary_color"}}';
-      {% endif %}
       window.string_Responders = "{% trans "Responders" %}";
       window.string_Polled = "{% trans "Polled" %}";
       window.string_Reporters = "{% trans "Reporters" %}";
