--- a/templates/base_admin_dashboard.haml
+++ b/templates/base_admin_dashboard.haml
@@ -24,22 +24,13 @@
       display: block;
       padding-left: 5px;
 
-      {% if org|config:'dark1_color' %}
-      color: {{ org|config:'dark1_color' }};
-      border-left: 5px solid {{ org|config:'dark1_color' }};
-      {% else %}
-      color: {{ org|config:'primary_color'|default:'#439932' }};
-      border-left: 5px solid {{ org|config:'primary_color'|default:'#439932' }};
-      {% endif %}
+      color: {{ org|config:'dark1_color'|default:'#439932' }};
+      border-left: 5px solid {{ org|config:'dark1_color'|default:'#439932' }};
     }
 
     .row1 a:hover, .row2 a:hover {
       background-color: #E6E7E8;
-      {% if org|config:'dark1_color' %}
-      color: {{ org|config:'dark1_color' }};
-      {% else %}
-      color: {{ org|config:'primary_color'|default:'#439932' }};
-      {% endif %}
+      color: {{ org|config:'dark1_color'|default:'#439932' }};
     }
 
     .row1.inactive a, .row2.inactive a, {
